[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/textures/interactives/switch_on.png" type="Texture" id=1]
[ext_resource path="res://assets/textures/interactives/switch_off.png" type="Texture" id=2]
[ext_resource path="res://src/game/utils/AudioHandler.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/game/entities/interactives/switch/Switch.gd" type="Script" id=4]
[ext_resource path="res://src/game/entities/interactives/switch/SwitchOnState.gd" type="Script" id=5]
[ext_resource path="res://src/game/entities/interactives/switch/SwitchOffState.gd" type="Script" id=6]
[ext_resource path="res://src/game/entities/interactives/switch/SwitchStateMachine.gd" type="Script" id=7]
[ext_resource path="res://assets/sound/sfx/actionable/switch_off.wav" type="AudioStream" id=8]
[ext_resource path="res://assets/sound/sfx/actionable/switch_on.wav" type="AudioStream" id=9]
[ext_resource path="res://src/game/partials/Actionable.tscn" type="PackedScene" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 7 )

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[node name="Switch" type="Area2D"]
collision_layer = 0
collision_mask = 0
monitoring = false
monitorable = false
script = ExtResource( 4 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 7 )
character_path = NodePath("..")
START_STATE = NodePath("Off")
STATES_LIST = [ NodePath("On"), NodePath("Off") ]

[node name="On" type="Node" parent="StateMachine"]
script = ExtResource( 5 )
state_id = "on"

[node name="OnSFX" parent="StateMachine/On" instance=ExtResource( 3 )]
_audio_bus = "Interactives"
_audio_references = [ ExtResource( 9 ) ]
_db_volumes = [ -15.0 ]
_pitch_scales = [ [ 2.0 ] ]

[node name="Off" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
state_id = "off"

[node name="OffSFX" parent="StateMachine/Off" instance=ExtResource( 3 )]
_audio_bus = "Interactives"
_audio_references = [ ExtResource( 8 ) ]
_db_volumes = [ -15.0 ]
_pitch_scales = [ [ 2.0 ] ]

[node name="SwitchOnSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="SwitchOffSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="Actionable" parent="." instance=ExtResource( 10 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Actionable"]
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[connection signal="finished" from="StateMachine/On" to="." method="_on_finished"]
[connection signal="finished" from="StateMachine/Off" to="." method="_on_finished"]
[connection signal="actioned" from="Actionable" to="StateMachine" method="_on_Switch_actioned"]
